# RPI-MultiService-Logger-Daemon

./: README.md
IPC-Library/: CMakeLists.txt  README.md
IPC-Library/include/: MsgQConnect.hpp  receiver.hpp  sender.hpp
IPC-Library/src/: MsgQConnect.cpp  buildShared .old.sh  buildShared.sh  receiver  receiver.cpp  sender  sender.cpp  testReceive  testReceiver.cpp  testSend  testSend2  testSender.cpp
Log-Receiver/src/: logReceiver.cpp  logSender.cpp  receiver  sender
Logging-Daemon/: CMakeLists.txt
Logging-Daemon/src/: config.txt  daamon.buggy.cpp  daemon  daemon.cpp
Mathematical-Operations-App/: CMakeLists.txt
Mathematical-Operations-App/include/: math_lib.h
Mathematical-Operations-App/src/: math  math_lib.cpp
